<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>org.baderlab.csplugins</groupId>
	<artifactId>enrichmentmap-parent</artifactId>
	<version>3.3.5-SNAPSHOT</version>
	<packaging>pom</packaging>
 
	<properties>
		<bundle.namespace>org.baderlab.csplugins</bundle.namespace>
	    <project.name>EnrichmentMap</project.name>
	    <cy3.version>3.7.1</cy3.version>
		<osgi.api.version>4.2.0</osgi.api.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<profiles>
		<profile>
			<id>prod</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<export.package>!${bundle.namespace}.*</export.package>
			</properties>
			<modules>
				<module>EnrichmentMapPlugin</module>
			</modules>
		</profile>
		<profile>
			<id>integration-test</id>
			<properties>
				<export.package>org.mskcc.*;prefuse.*;org.apache.*;com.google.*;org.ops4j.peaberry.*;org.baderlab.*</export.package>
			</properties>
			<modules>
				<module>EnrichmentMapPlugin</module>
				<module>EnrichmentMapIntegrationTest</module>
			</modules>
		</profile>
	</profiles>
	
	<repositories>
		<repository>
			<id>cytoscape_thirdparty</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Wrapped Third Party Libraries</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/thirdparty/</url>
		</repository>
		<repository>
			<id>releases</id>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Releases</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>snapshots</id>
			<name>Snapshots</name>
			<url>http://code.cytoscape.org/nexus/content/repositories/snapshots/</url>
		</repository>
	</repositories>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<extensions>true</extensions>
				<configuration>
					<source>11</source>
					<target>11</target>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArguments>
						<Xmaxwarns>10000</Xmaxwarns>
						<Xmaxerrs>10000</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<scm>
		<connection>scm:git:git://github.com/BaderLab/EnrichmentMapApp.git</connection>
		<url>https://github.com/BaderLab/EnrichmentMapApp</url>
		<developerConnection>scm:git:git@github.com:BaderLab/EnrichmentMapApp.git</developerConnection>
	</scm>
	
</project>
